fix dark mode

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,10 @@
           box-sizing: border-box;
 }
 
+body {
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
 *,
 button,
 input {
@@ -65,7 +69,7 @@ header nav ul li {
 header nav ul li a {
   text-decoration: none;
   font-size: 16px;
-  color: #111;
+  color: #FFF;
   font-weight: 700;
 }
 
@@ -125,6 +129,7 @@ header nav .buttons .signup {
 .heading .text {
   font-size: 40px;
   font-weight: 600;
+  color: #FFF;
 }
 
 .heading .wrapper {
